<resources>
    <string name="app_name">ProfileMy</string>
    <string name="username">UserName</string>
    <string name="password">Password</string>
    <string name="login">Log In</string>
    <string name="welcome">Welcome</string>
    <string name="this_is_your_home_page">This is your Home Page.</string>
    <string name="image_page">Image Page</string>
    <string name="todo">TODO</string>
    <string name="new_user">New User</string>
    <string name="enter_name">Enter Name</string>
    <string name="add_course">Add Course</string>
    <string name="add_db">Add DB</string>
    <string name="read_db">Read DB</string>
    <string name="user_database">User Database</string>
    <string name="add_and_view_users_easily">Add and view users easily</string>
    <string name="enter_user_name">Enter user name</string>
    <string name="add_user">Add User</string>

    <string-array name="FruitsName">
        <item>Apple</item>
        <item>Bananas</item>
        <item>Cherry</item>
        <item>Avocados</item>
        <item>Plum</item>
        <item>Fig</item>
        <item>Guava</item>
        <item>Jackfruit</item>
        <item>Water Melon</item>
        <item>Orange</item>
        <item>Mango</item>
        <item>Olive</item>
        <item>Tomato</item>
        <item>Elderberry</item>
        <item>Grapes</item>
        <item>Honeydew</item>
        <item>Kiwi</item>
    </string-array>

</resources>